button cursor spacing fixes

--- a/app/assets/stylesheets/bad_toothache.css
+++ b/app/assets/stylesheets/bad_toothache.css
@@ -81,6 +81,7 @@ div#outer_confessions_m {
     font-size: 1.5em;
     padding: 0.1.5em;
     width: 90%;
+    cursor: pointer;
 }
 #confess_submit_m:hover {
 	color:#FFFFFF;
@@ -121,6 +122,7 @@ div#outer_confessions_m {
 	-moz-box-shadow: inset 10px 13px 13px -6px rgba(212,213,215,1);
 	box-shadow: inset 10px 13px 13px -6px rgba(212,213,215,1);
 	width:90%;
+	color:rgb(96, 57, 19);
 	font-family: 'Bubblegum Sans',cursive;
 }
 #donate_submit_m {
@@ -165,7 +167,6 @@ div#outer_confessions_m {
 	padding-top: 70px;
 	padding-bottom: 25px;
 }
-
 
 
 #Random_Answer_m {
